<resources>
    <string name="app_name">Koobing_App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="labelRegister">No estas registrat? Click aquí</string>
    <string name="book_title">Book Title</string>
    <string name="nom_biblioteca">Nom Biblioteca</string>
    <string name="reservar">Reservar</string>
    <string name="registre">Registre</string>
    <string name="dni">DNI</string>
    <string name="nom">Nom</string>
    <string name="cognom">Cognom</string>
    <string name="data_naixament">Data Naixament</string>
    <string name="correu">Correu</string>
    <string name="contrassenya">Contrassenya</string>
    <string name="autor">Autor</string>
    <string name="genere">genere</string>
    <string name="editorial">editorial</string>
</resources>