<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/bookImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/libro" />

    <TextView
        android:id="@+id/bookTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:text="@string/book_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/libraryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:text="@string/nom_biblioteca"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/reservarBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="130dp"
        android:text="@string/reservar" />

</LinearLayout>
