<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="435dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/logoLlibre"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:importantForAccessibility="no"
            android:layout_marginStart="140dp"
  
            app:srcCompat="@drawable/libro" />

        <TextView
            android:id="@+id/nomLlibre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="@string/book_title"
            android:textAlignment="center"
           />

        <TextView
            android:id="@+id/autorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="@string/autor"
            android:textAlignment="center"
             />

        <TextView
            android:id="@+id/genereName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="@string/genere"
            android:textAlignment="center"
        />

        <TextView
            android:id="@+id/editorialName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="@string/editorial"
            android:textAlignment="center"
          />

        <TextView
            android:id="@+id/idioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="idioma"
            android:textAlignment="center"
           />

        <TextView
            android:id="@+id/edicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="edició"
            android:textAlignment="center"
           />

        <TextView
            android:id="@+id/dataPubli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="dataPublicacio"
            android:textAlignment="center"
             />

        <Button
            android:id="@+id/reservarButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="60dp"
            android:onClick="onReservar"
            android:text="@string/reservar" />


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>